accessibility changes; adds for loop break in events.php, but does not fix OBOC problem

--- a/cpldc.css
+++ b/cpldc.css
@@ -637,7 +637,7 @@
     }
     .rsaquo {
         /* color: #2d63af; */
-        font-size: 20px;
+        font-size: 15px;
     }
     .events-viewmore, .blogs-viewmore {
         padding-bottom: 20px;
